[package]
name = "rustprotosrv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.19.1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.22"
webpki = "0.21"
openssl = "0.10"
tokio-openssl = "0.6"
